<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/SowiloDesignTheme"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/colorButton"
        app:layout_constraintEnd_toStartOf="@+id/colorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/onSwitch"
        app:layout_constraintVertical_bias="0.25" />

    <Switch
        android:id="@+id/onSwitch"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:switchTextAppearance="@android:style/TextAppearance.Material.Small"
        android:text="Switch"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/colorButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:text="Color Shape"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/onSwitch"
        app:layout_constraintStart_toStartOf="@+id/onSwitch"
        app:layout_constraintTop_toBottomOf="@+id/onSwitch" />

    <TextView
        android:id="@+id/hueSatBriTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="@+id/nameTextView"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

</android.support.constraint.ConstraintLayout>
