<resources>
    <string name="app_name">LEDNavigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="changeColor">Change Color</string>
    <string name="searchForGateWay">Search For Gateway</string>
    <string name="colorButton">Change Color</string>
    <string name="title_activity_bridge_discovery">BridgeDiscoveryActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation_drawer">navigation_drawer</string>
    <string name="changeGatewayIP">Change Broker IP</string>
    <string name="rescan">Rescan</string>
    <string name="GET">GET</string>
    <string name="PUT">PUT</string>
    <string name="POST">POST</string>
    <string name="DELETE">DELETE</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">www.sowilodesign.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
